tests/harness/errors/068_str_lower_hint.eu
# Mistake: using str.lower (Python/JavaScript style) — does not exist in eucalypt
text: "HELLO"
result: text str.lower
